--- a/pages-css/horizon.css
+++ b/pages-css/horizon.css
@@ -137,3 +137,49 @@
     height: 15rem;
   }
 }
+
+/* Sponsors section */
+.hor-sponsors {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  align-items: center;
+  position: relative;
+}
+
+.hor-sponsor-heading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hor-sponsor-heading p {
+  font-size: 5rem;
+  text-align: center;
+}
+
+.hor-sponsors-carousel {
+  display: flex;
+  width: 100%; /* Set to twice the width of the container */
+  gap: 7%;
+  animation: scroll 20s linear infinite;
+}
+
+.sponsor-card {
+  flex: 0 0 20%; /* Equal width for each sponsor card, adjust as needed */
+}
+
+.sponsor-card img {
+  width: 100%;
+  height: 100%;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%); /* Move back to the starting position */
+  }
+}
