--- a/pages-css/team.css
+++ b/pages-css/team.css
@@ -50,7 +50,7 @@ body {
 
 .team-grid{
     display: flex;
-    justify-content: center;
+    justify-content:space-evenly;
     align-items: center;
     flex-wrap: wrap;
 
@@ -68,13 +68,16 @@ body {
         margin: auto;
         text-align: center;
         width: 70%;
-        font-size: 3rem;
+        font-size: 3.5rem;
     }
     .team-heading{
         margin: auto;
         text-align: center;
         width: 70%;
-        font-size: 2rem;
+        font-size: 3rem;
+    }
+    .team-card-heads{
+        width: 45%;
     }
     
 }
