--- a/pages-css/team.css
+++ b/pages-css/team.css
@@ -77,7 +77,16 @@ body {
         font-size: 3rem;
     }
     .team-card-heads{
-        width: 45%;
+        width: 50%;
+        padding: 0;
+    }
+    .team-grid{
+        display: flex;
+        justify-content:center;
+        align-items: center;
+        flex-wrap: wrap;
+    
+        width: 90%;
     }
     
 }
