--- a/pages-css/sponsors.css
+++ b/pages-css/sponsors.css
@@ -37,3 +37,15 @@
     justify-content: center;
     border-radius: 2rem;
 }
+
+@media screen and (max-width:850px) {
+    .sponsor-card{
+        width: 50%;
+    }
+    .sponsor-heading p{
+        width: 70%;
+        margin: auto;
+        font-size: 4rem;
+        text-align: center;
+    }
+}
