--- a/style.css
+++ b/style.css
@@ -234,8 +234,14 @@ header {
 .iith-main-heading {
   font-size: 2.5rem;
   font-family: 'Ikaros Sans', sans-serif;
-
 }
+.horizon-button{
+  font-size: 2em;
+  text-align: center;
+  min-width: 300px;
+  max-width: 400px;
+}
+
 @media screen and (max-width: 800px) {
   .fcc-main-heading {
     font-size: 4.5rem;
@@ -252,38 +258,6 @@ header {
   .titlecard {
     align-self: flex-start;
   }
-}
-
-.search {
-  padding: 5px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 25rem;
-  border: 2px solid white;
-  border-radius: 20px;
-  box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, 0.256);
-}
-@media screen and (max-width: 500px) {
-  .search {
-    width: 80vw;
-  }
-}
-.search:-ms-keyboard-active {
-  box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, 0.256);
-}
-#searchbar {
-  font-family: 'Ikaros Sans', sans-serif;
-  background: none;
-  border: none;
-  overflow: visible;
-  cursor: pointer;
-  width: 100%;
-}
-#searchbutton {
-  width: 10%;
-  border: none;
-  background: none;
 }
 
 /* Horizon Card */
@@ -384,20 +358,29 @@ header {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  padding-left: 2%;
+
 }
 .quote-text {
   width: auto;
-  text-wrap: balance;
   height: auto;
   font-size: 12vw;
   font-weight: 700;
   line-height: 100%;
+  padding-left: 2%;
 }
 .arrow {
+  display: flex;
+  align-items: center;
+  justify-content: end;
   width: 80%;
   position: absolute;
   right: 0;
   z-index: -5;
+}
+.quote-span{
+  font-family: 'Lato', sans-serif;
+  font-weight: 700;
 }
 
 /* YT Embed */
