--- a/style.css
+++ b/style.css
@@ -79,7 +79,12 @@ header {
     display: block;
   }
 }
-
+.current-link{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: -10px;
+}
 .btn1 {
   width: 50%;
   font-size: 1rem;
@@ -201,9 +206,10 @@ header {
 /* Landing Body */
 .landing {
   width: 100%;
-  height: 90vh;
+  height: auto;
   margin: auto;
   padding-top: 3%;
+  padding-left: 2%;
 }
 @media screen and (max-width: 1100px) {
   .landing {
@@ -900,4 +906,28 @@ footer {
   position: absolute;
   top: 0px;
   left: -200px;
+}
+
+
+
+.card {
+  border:none;
+  transform-style: preserve-3d;  /* Ensure child elements are rendered in 3D space */
+  transition: transform 0.6s; /* Add a smooth transition effect on the transform property */
+}
+
+.card:hover {
+  transform: rotateY(180deg); /* Flip the card on hover (rotateY for a horizontal flip) */
+}
+
+.card-front,
+.card-back {
+  backface-visibility: hidden; /* Hide the back face of the element during the flip */
+}
+
+
+.card-back:hover{
+  transform: rotateY(180deg); /* Initially rotate the back side of the card */
+  background-color: yellow;
+  /* Styles for the back side of the card */
 }
